Java source info: return `:formatted-arglists` when possible
Fixes https://github.com/clojure-emacs/orchard/issues/190